# studies

./: .gitignore  .travis.yml  README.md  home work 3.cpp  home work 4.cpp  home work 5.cpp  home work1.cpp  homework 2.cpp
firstYear/firstSemester-introducing/targil10/: 10_1.cpp
firstYear/firstSemester-introducing/targil11/: 11_1.cpp  11_2.cpp  11_3.cpp  11_4.cpp  11_5.cpp
firstYear/firstSemester-introducing/targil12/: 12_1.cpp  12_2.cpp  12_3.cpp  12_4.cpp
firstYear/firstSemester-introducing/targil3/: 3_1.cpp  3_2.cpp  3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp  3_7.cpp
firstYear/firstSemester-introducing/targil4/: 4_1.cpp  4_2.cpp  4_3.cpp  4_4.cpp  4_5.cpp  4_6.cpp  CMakeLists.txt
firstYear/firstSemester-introducing/targil5/: 5_1.cpp  5_2.cpp  5_3.cpp  5_4.cpp
firstYear/firstSemester-introducing/targil6/: 6_1.cpp  6_2.cpp  6_3.cpp  6_4.cpp  6_5.cpp
firstYear/firstSemester-introducing/targil7/: 7_1.cpp  7_2.cpp  7_3.cpp  7_4.cpp
firstYear/firstSemester-introducing/targil8/: 8_1.cpp
firstYear/firstSemester-introducing/targil9/: 9_1.cpp  9_2.cpp  9_3.cpp  9_4.cpp
firstYear/sadnaCpp/targil1/: CMakeLists.txt  bus.cpp  bus.h  line.cpp  line.h  main.cpp  mytypes.h
firstYear/sadnaCpp/targil2/: common.cpp  common.h  complex.cpp  complex.h  main.cpp  menu.cpp  (+5 more)
firstYear/sadnaCpp/targil5/: CMakeLists.txt
firstYear/sadnaCpp/targil5/q1/: main.cpp  test.txt
firstYear/sadnaCpp/targil5/q2/: CMakeLists.txt  list.cpp  list.h
firstYear/sadnaCpp/targil5/q3/: list.cpp  list.h  main.cpp  test.txt
firstYear/sadnaCpp/targil5/q4/: list.cpp  list.h  main.cpp  test.txt
(+76 files in other folders)
